--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@
     }
   }
   .light-pink-background {
-    background: var(--clr-pink-light);
+    background: var(--clr-blue-light);
   }
   .light-blue-background {
     background: var(--clr-blue-light);
